# MediBot

./: README.md  app.py  pyproject.toml  requirements.txt  store_index.py
.github/workflows/: cicd.yaml
